<resources>
    <string name="app_name">TechnologyAssessment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Are You in an ‘Inter-Intimate’ Relationship?</string>
    <string name="abstractText">The U.S. vaccine rollout has plateaued and the course of the coronavirus pandemic in this country may depend on how many people are ultimately swayed to get vaccinated.</string>
    <string name="author">Author : Jame fev</string>
    <string name="source">Source : New York Times</string>
    <string name="date">2021-07-20</string>
    <string name="tool_bar_title">NY Times Most Popular</string>
</resources>