<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:padding="12dp"
    tools:context=".view.ui.gallery.GalleryFragment">

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/detailsImage"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailTitle"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/detailsImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:text="@string/title"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_sans_bold"
        />

    <TextView
       android:id="@+id/detailAbstract"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/detailTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/abstractText"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/nunito_sans"
        />

    <TextView
        android:id="@+id/detailAuthor"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/detailAbstract"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/author"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/nunito_sans_bold"
        />

    <TextView
        android:id="@+id/detailSource"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/detailAuthor"
       android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/source"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/nunito_sans"
        />

</androidx.constraintlayout.widget.ConstraintLayout>