<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    tools:context=".view.ui.home.HomeFragment">
    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_image"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_toEndOf="@+id/image"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/toggle"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/title"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/text_color"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/author"
                        app:layout_constrainedWidth="false"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textColor="@color/text_color"
                        android:fontFamily="@font/nunito_sans"
                        android:textStyle="normal"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/calender"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_marginEnd="8dp"
                        android:id="@+id/calender"
                        android:layout_width="0dp"
                        app:layout_constraintHorizontal_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date"
                       app:layout_constraintEnd_toStartOf="@+id/date"
                        app:layout_constrainedWidth="false"
                        app:layout_constraintTop_toTopOf="parent"

                        />
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintHorizontal_weight="1"
                        android:text="@string/date"
                        android:layout_toEndOf="@+id/calender"
                        android:textSize="15sp"
                        android:textColor="@color/text_color"
                        android:textStyle="normal"
                        app:layout_constrainedWidth="false"
                        android:fontFamily="@font/nunito_sans"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:id="@+id/toggle"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>